--- a/templates/page_sector/master_plan_programs.html
+++ b/templates/page_sector/master_plan_programs.html
@@ -20,7 +20,7 @@ $(document).ready(function() {
 {% block body_content %}
 <div class="ss_control_panel">
     <ul>
-        <li><img src="{{MEDIA_URL}}/images/icons/manage.png" class="icon"/><a href="{% url view_master_plan_manage_organization master_plan.ref_no %}">จัดการแผนงาน/โครงการ</a></li>
+        <li><img src="{{MEDIA_URL}}/images/icons/manage.png" class="icon"/><a href="{% url view_master_plan_manage_organization master_plan.ref_no %}">จัดการแผนงาน</a></li>
     </ul>
 </div>
 
