--- a/templates/page_report/report_reference.html
+++ b/templates/page_report/report_reference.html
@@ -17,39 +17,48 @@
 
 
 <div class="report_reference_page">
-	<h3>โครงการ</h3>
+	
 	{% if ref_projects %}
+	<h2 class="h2">โครงการ</h2>
 	<ul>
-		{% for project in ref_projects %}
-		<li><a href="{% url view_project_overview project.id %}">{{project.name}}</a></li>
+		{% for reference in ref_projects %}
+		<li>
+			<div><a href="{% url view_project_overview reference.project.id %}">{{reference.project.name}}</a></div>
+			{% if reference.description %}<div class="description">{{reference.description}}</div>{% endif %}
+		</li>
 		{% endfor %}
 	</ul>
-	{% else %}
-	<div class="ss_no_information">ไม่มีโครงการที่เกี่ยวข้อง</div>
 	{% endif %}
 	
-	<h3>ตัวชี้วัด</h3>
-	{% if ref_kpi_schedules %}
-	<ul>
-        {% for schedule in ref_kpi_schedules %}
-        <li><a href="{% url view_kpi_overview schedule.id %}">{{schedule.kpi.ref_no}} {{schedule.kpi.name}}</a></li>
-        {% endfor %}
-    </ul>
-	{% else %}
-    <div class="ss_no_information">ไม่มีตัวชี้วัดที่เกี่ยวข้อง</div>
+	{% if kpis %}
+	<h2 class="h2">ตัวชี้วัด</h2>
+	{% for kpi in kpis %}
+		<h3>{{kpi.name}}</h3>
+		<ul>
+			{% for reference in kpi.references %}
+			<li>
+				<div><a href="{% url view_kpi_overview reference.kpi_schedule.id %}">ไตรมาสที่ {{reference.kpi_schedule.quarter}} ปี {{reference.kpi_schedule.quarter_year}}</a> คาดการณ์ {{reference.kpi_schedule.target}} {{kpi.unit_name}} | ผลที่เกิด {{reference.kpi_schedule.result}} {{kpi.unit_name}}</div>
+				{% if reference.description %}<div class="description">{{reference.description}}</div>{% endif %}
+			</li>
+			{% endfor %}
+		</ul>
+	{% endfor %}
     {% endif %}
 	
-	<h3>งวดเบิกจ่าย</h3>
 	{% if ref_budget_schedules %}
+	<h2 class="h2">การเบิกจ่าย</h2>
 	<ul>
-        {% for schedule in ref_budget_schedules %}
-        <li><a href="{% url view_budget_overview schedule.id %}">งวดเบิกจ่ายวันที่ {{schedule.schedule_on|full_date}}</a></li>
+        {% for reference in ref_budget_schedules %}
+        <li>
+        	<div><a href="{% url view_budget_overview reference.budget_schedule.id %}">งวดเบิกจ่ายวันที่ {{reference.budget_schedule.schedule_on|abbr_date}}</a> คาดการณ์ {{reference.budget_schedule.grant_budget}} บาท | เบิกจ่ายจริง {{reference.budget_schedule.claim_budget}} บาท</div>
+            {% if reference.description %}<div class="description">{{reference.description}}</div>{% endif %}
+		</li>
         {% endfor %}
     </ul>
-	{% else %}
-    <div class="ss_no_information">ไม่มีงวดเบิกจ่ายที่เกี่ยวข้อง</div>
     {% endif %}
+	
+	{% if not ref_projects and not ref_kpi_schedules and not ref_budget_schedules %}
+	<div class="ss_no_information">ไม่มีข้อมูลประกอบ</div>
+	{% endif %}
 </div>
-
-
 {% endblock %}
