--- a/templates/page_report/report_reference_edit.html
+++ b/templates/page_report/report_reference_edit.html
@@ -15,6 +15,43 @@
 </div>
 
 <div class="report_reference_edit_page">
-    
+    <form class="ss_form" method="post" action=".">
+    	{% csrf_token %}
+		
+		<h2>โครงการ</h2>
+		<ul>
+		{% for project in projects %}
+		    <li class="project">
+		    	<div><input type="checkbox" id="project_{{project.id}}" name="project" value="{{project.id}}" {% if project.has_reference %}checked="checked"{% endif %}/> <label for="project_{{project.id}}">{{project.name}}</label></div>
+				<div class="description"><input type="text" value="{{project.reference_description}}" name="desc_project_{{project.id}}"/></div>
+		    </li>
+		{% endfor %}
+		</ul>
+		
+		<h2>ตัวชี้วัด</h2>
+		{% for kpi in kpis %}
+            <h3>{{kpi.name}}</h3>
+            <ul>
+            	{% for schedule in kpi.schedules %}
+				<li class="kpi">
+					<div><input type="checkbox" id="kpi_{{schedule.id}}" name="kpi" value="{{schedule.id}}" {% if schedule.has_reference %}checked="checked"{% endif %}/> <label for="kpi_{{schedule.id}}">ไตรมาสที่ {{schedule.quarter}} ปี {{schedule.quarter_year}} | คาดการณ์ {{schedule.target}} {{kpi.unit_name}} | ผลที่เกิด {{schedule.result}} {{kpi.unit_name}}</label></div>
+					<div class="description"><input type="text" value="{{schedule.reference_description}}" name="desc_kpi_{{schedule.id}}"/></div>
+				</li>
+				{% endfor %}
+			</ul>
+		{% endfor %}
+		
+		<h2>การเบิกจ่าย</h2>
+		<ul>
+        {% for schedule in budget_schedules %}
+           <li class="budget">
+               <div><input type="checkbox" id="budget_{{schedule.id}}" name="budget" value="{{schedule.id}}" {% if schedule.has_reference %}checked="checked"{% endif %}/> <label for="budget_{{schedule.id}}">เบิกจ่ายวันที่ {{schedule.schedule_on|abbr_date}} | คาดการณ์ {{schedule.grant_budget}} บาท | เบิกจ่ายจริง {{schedule.claim_budget}} บาท</label></div>
+			   <div class="description"><input type="text" value="{{schedule.reference_description}}" name="desc_budget_{{schedule.id}}"/></div>
+		    </li>
+        {% endfor %}
+        </ul>
+		
+        <div class="button_panel"><button class="submit-button">บันทึกการแก้ไข</button></div>
+	</form>
 </div>
 {% endblock %}
