--- a/templates/page_sector/master_plan_kpi.html
+++ b/templates/page_sector/master_plan_kpi.html
@@ -9,6 +9,35 @@
 
 {% block body_content %}
 <div class="master_plan_overview_page">
-    
+	<table border="1" width="100%">
+		<th rowspan="2">กิจกรรมที่แผนงานต้องดำเนินการ</th>
+		{% generate_quarter_table_header quarter_year %}
+		<tr>
+			{% for i in 4|get_range %}
+			<td>คาดการณ์</td>
+			<td>ผลที่เกิด</td>
+			{% endfor %}
+		</tr>
+		{% for plan in master_plan.plan_set.all %}
+			<tr>
+				<td>
+					<ul>
+						<li>{{ plan.name }} ({{ plan.ref_no }})</li>
+						{% for program in plan.program_set.all %}
+							<li>{{ program.name }} [{% print_program_kpis program %}]</li>
+						{% endfor %}
+					</ul>
+				</td>
+				{% for quarter_no in 4|get_range %}
+					<td>
+						{% print_master_plan_quarter_kpi_target master_plan quarter_no %}
+					</td>
+					<td>
+						{% print_master_plan_quarter_kpi_result master_plan quarter_no %}
+					</td>
+				{% endfor %}
+			</tr>
+		{% endfor %}
+	</table>
 </div>
 {% endblock %}
