--- a/templates/page_sector/sector_kpi.html
+++ b/templates/page_sector/sector_kpi.html
@@ -27,11 +27,25 @@
 			<td>ผลที่เกิด</td>
 			{% endfor %}
 		</tr>
-		{% for master_plan in sector.master_plans %}
-		<tr>
-			<td>{{ master_plan.name }}</td>
-			<td></td>
-		</tr>
+		{% for plan in master_plan.plan_set.all %}
+			<tr>
+				<td>
+					<ul>
+						<li>{{ plan.name }} ({{ plan.ref_no }})</li>
+						{% for program in plan.program_set.all %}
+							<li><a href="{% url view_program_overview program.id %}">{{ program.name }}</a> [{% print_program_kpis program %}]</li>
+						{% endfor %}
+					</ul>
+				</td>
+				{% for quarter_no in 4|get_range %}
+					<td>
+						{% print_master_plan_quarter_kpi 'target' plan quarter_year quarter_no %}
+					</td>
+					<td>
+						{% print_master_plan_quarter_kpi 'result' plan quarter_year quarter_no %}
+					</td>
+				{% endfor %}
+			</tr>
 		{% endfor %}
 	</table>
 	
